# phpxx

./: .gitignore  Cargo.toml  README.md  main.phpxx
src/: ctx.rs  error.rs  exprs.rs  lex.rs  main.rs  parse.rs
src/exprs/: array.rs  assign.rs  call.rs  conditional.rs  echo.rs  jump.rs  math.rs  number.rs  spread.rs  string.rs  variable.rs  void.rs
