[package]
name = "phpxx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored="2"
logos = "0.12.0"
logos-derive = "0.12.0"
snailquote = "0.3.0"
dyn-clone = "1.0.4"
match_cast = "0.1.2"
unicode-segmentation = "0.1.2"
gc = { version = "0.4", features = ["derive"] }
